Add hello world

--- a/test/01index.html
+++ b/test/01index.html
@@ -10,31 +10,31 @@
     <p>This page demonstrates using React with no build tooling.</p>
     <p>React is loaded as a script tag.</p>
 
+
     <!--
       1. html 파일에 dom 컨테이너 설치
       div 태그를 추가 - react로 원하는 내용을 표시할 위치, dom 컨테이너
     -->
 
+    <div id="like_button_container"></div>
+
     <!-- 
       tip. 컴포넌트 재사용, 여러개의 컴포넌트 설치
      -->
-    <p>
+    <!-- <p>
       This is the first comment.
-      <!-- We will put our React component inside this div. -->
       <div class="like_button_container" data-commentid="1"></div>
     </p>
 
     <p>
       This is the second comment.
-      <!-- We will put our React component inside this div. -->
       <div class="like_button_container" data-commentid="2"></div>
     </p>
 
     <p>
       This is the third comment.
-      <!-- We will put our React component inside this div. -->
       <div class="like_button_container" data-commentid="3"></div>
-    </p>
+    </p> -->
 
     <!-- 
       2. 스크립트 태그 추가하기
