--- a/webgame/1. 구구단/like-button-jsx.html
+++ b/webgame/1. 구구단/like-button-jsx.html
@@ -1,37 +1,63 @@
 <html>
-<head>
-</head>
-<body>
-<div id="root"></div>
-<script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
-<script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
-<script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
-<!--<script src="https://unpkg.com/react@16/umd/react.production.min.js" crossorigin></script>-->
-<!--<script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>-->
-<script type="text/babel">
-  'use strict';
+  <head> </head>
+  <body>
+    <div id="root"></div>
+    <script
+      crossorigin
+      src="https://unpkg.com/react@18/umd/react.development.js"
+    ></script>
+    <script
+      crossorigin
+      src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
+    ></script>
+    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+    <!--<script src="https://unpkg.com/react@16/umd/react.production.min.js" crossorigin></script>-->
+    <!--<script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>-->
+    <script type="text/babel">
+      "use strict";
 
-  class LikeButton extends React.Component {
-    constructor(props) {
-      super(props);
-      this.state = {liked: false};
-    }
+      // class LikeButton extends React.Component {
+      //   constructor(props) {
+      //     super(props);
+      //     this.state = {liked: false};
+      //   }
 
-    render() {
-      if (this.state.liked) {
-        return 'You liked this.';
+      //   render() {
+      //     if (this.state.liked) {
+      //       return 'You liked this.';
+      //     }
+
+      //     return (
+      //       <button onClick={() => this.setState({liked: true})}>
+      //         {this.state.liked ? 'Liked' : 'Like!'}
+      //       </button>
+      //     );
+      //   }
+      // }
+
+      // 함수 컴포넌트
+      function LikeButton() {
+        // this를 쓸 일이 없다
+        const [liked, setLiked] = React.useState(false);
+        if (liked) {
+          return "You liked this.";
+        }
+        return (
+          <button
+            onClick={() => {
+              setLiked(true);
+            }}
+          >
+            Like
+          </button>
+        );
       }
-
-      return (
-        <button onClick={() => this.setState({liked: true})}>
-          Like
-        </button>
+    </script>
+    <script type="text/babel">
+      // ReactDOM.render(<LikeButton />, document.querySelector("#root"));
+      ReactDOM.createRoot(document.querySelector("#root")).render(
+        <LikeButton />
       );
-    }
-  }
-</script>
-<script type="text/babel">
-  ReactDOM.render(<LikeButton/>, document.querySelector('#root'));
-</script>
-</body>
+    </script>
+  </body>
 </html>
